--- a/files/templates/profile.html
+++ b/files/templates/profile.html
@@ -1,6 +1,6 @@
 
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Profile{% endblock %}
 {% block content %}
-    <h1>Home</h1>
+    <h1>Profile</h1>
 {% endblock %}
