--- a/files/templates/home.html
+++ b/files/templates/home.html
@@ -1,6 +1,10 @@
-
+  
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
-{% block content %}
-    <h1>Home</h1>
+{% block title %}
+    Home
+{% endblock %}
+{% block content%}
+    {% for user in users %}
+        {{ user.txt}}
+    {% endfor %}
 {% endblock %}
