--- a/files/templates/login.html
+++ b/files/templates/login.html
@@ -1,21 +1,32 @@
 
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
-{% block content %}
+{% block title %}
+    Login
+{% endblock %}
+{% block content%}
     <form method="POST">
-        <h3 align="center">Login</h3>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username">
-
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password">
-
-            <br>
-
-            <div align="center">
-                <button class="btn btn-primary" type="submit">Login</button>
-            </div>
+      <h3 align="center">Login</h3>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input
+          type="text"
+          id="email"
+          name="email"
+          class="form-control"
+          placeholder="Enter Email"
+        />
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          placeholder="Enter Password"
+        />
+        <br />
+        <div align="center">
+          <button class="btn btn-primary" type="submit">Login</button>
         </div>
-    </form>>
+      </div>
+    </form>
 {% endblock %}
