Display User Info, Added CSS to Home Page

--- a/files/templates/home.html
+++ b/files/templates/home.html
@@ -4,7 +4,30 @@
     Home
 {% endblock %}
 {% block content%}
-    {% for user in users %}
-        {{ user.txt}}
-    {% endfor %}
+    <br>
+    <form action="/newUser">
+        <input type="submit" value="New User" />
+    </form>
+    <table id="user-info">
+        <tr>
+            {% for col in cols %}
+                <th>{{ col.replace('_', ' ') }}</th>
+            {% endfor %}
+            <th>Actions</th>
+        </tr>
+        {% for user in users %}
+            <tr>
+                <td>{{ user.first_name }}</td>
+                <td>{{ user.last_name }}</td>
+                <td>{{ user.email }}</td>
+                <td>{{ user.username }}</td>
+                <td>{{ user.address }}</td>
+                <td>
+                    <form class="action" action="/profile/{{ user.id }}">
+                        <input class="action_buttons" type="submit" value="Edit" />
+                    </form>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
