--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
@@ -27,7 +28,8 @@
           <div class="navbar-nav">
             {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="/home">Home</a>
-              <a class="nav-item nav-link" href="/">Log Out</a>
+              <a class="nav-item nav-link" href="/newUser">New User</a>
+              <a class="nav-item nav-link" href="/logout">Log Out</a>
             {% else %}
               <a class="nav-item nav-link" href="/">Login</a>
               <a class="nav-item nav-link" href="/signup">Sign Up</a>
