--- a/files/templates/profile.html
+++ b/files/templates/profile.html
@@ -2,5 +2,5 @@
 {% extends "base.html" %}
 {% block title %}Profile{% endblock %}
 {% block content %}
-    <h1>Profile</h1>
+    {{ username }}
 {% endblock %}
