--- a/files/templates/signup.html
+++ b/files/templates/signup.html
@@ -3,45 +3,30 @@
     Sign Up
 {% endblock %}
 {% block content %}
-    <form method="POST">
-      <h3 align="center">Sign Up</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="text"
-          id="email"
-          name="email"
-          class="form-control"
-          placeholder="Enter Email"
-        />
-        <label for="username">Username</label>
-        <input
-          type="text"
-          id="username"
-          name="username"
-          class="form-control"
-          placeholder="Enter Username"
-        />
-        <label for="password1">Password</label>
-        <input
-          type="password"
-          id="password1"
-          name="password1"
-          class="form-control"
-          placeholder="Enter Password"
-        />
-        <label for="password2">Password Again</label>
-        <input
-          type="password"
-          id="password2"
-          name="password2"
-          class="form-control"
-          placeholder="Enter Password Again"
-        />
-        <br />
-        <div align="center">
-          <button class="btn btn-primary" type="submit">Sign Up</button>
-        </div>
-      </div>
-    </form>
+	<form method="POST">
+	<h3 align="center">Sign Up</h3>
+
+	<div class="form-group">
+		{% for col in cols %}
+			<label for={{ col }}>{{ col.replace('_', ' ').title() }}</label>
+			<input
+				type="text"
+				id="{{ col }}"
+				name="{{ col }}"
+				class="form-control"
+				placeholder="Enter {{ col.replace('_', ' ') }}"
+			/>
+		{% endfor %}
+
+		<label for="password1">Password</label>
+		<input type="password" id="password1" name="password1" class="form-control" placeholder="Enter Password" />
+
+		<label for="password2">Confirm Password</label>
+		<input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password" />
+
+		<div align="center">
+			<button class="btn btn-primary" type="submit">Create User</button>
+		</div>
+	</div>
+	</form>
 {% endblock %}
