--- a/files/templates/newUser.html
+++ b/files/templates/newUser.html
@@ -8,11 +8,16 @@
     <form method="POST">
         <h3 align="center">New User</h3>
         <div class="form-group">
-            {% for col in cols %}
+            {% for col in newusercols %}
                 <label for={{ col }}>{{ col.replace('_', ' ').title() }}</label>
                 <input type="text" id="{{ col }}" name="{{ col }}" class="form-control"
                 placeholder="Enter {{ col.replace('_', ' ') }}" />
             {% endfor %}
+            <label for="user_type">User Type:</label>
+			<select name="user_type" id="user_type">
+				<option value="User">User</option>
+				<option value="Employee">Employee</option>
+			</select>
             <div align="center">
                 <button class="btn btn-primary" type="submit">Create User</button>
             </div>
