--- a/files/templates/profile.html
+++ b/files/templates/profile.html
@@ -6,7 +6,7 @@
         <h3 align="center">Edit Profile</h3>
 
         <div class="form-group">
-            {% for col in cols %}
+            {% for col in profilecols %}
                 <label for={{ col }}>{{ col.replace('_', ' ').title() }}:</label>
                 <input
                     type="text"
@@ -16,11 +16,13 @@
                     value={{ user[col.replace(' ', '_').lower()] }}
                 />
             {% endfor %}
-            <label for="password1">New Password:</label>
-            <input type="password" id="password1" name="password1" class="form-control" />
+            {% if user == current_user: %}
+                <label for="password1">New Password:</label>
+                <input type="password" id="password1" name="password1" class="form-control" />
 
-            <label for="password2">Confirm New Password:</label>
-            <input type="password" id="password2" name="password2" class="form-control" />
+                <label for="password2">Confirm New Password:</label>
+                <input type="password" id="password2" name="password2" class="form-control" />
+            {% endif %}
 
             <div align="center">
                 <button class="btn btn-primary" type="submit">Save</button>
