--- a/files/templates/signup.html
+++ b/files/templates/signup.html
@@ -7,7 +7,7 @@
 		<h3 align="center">Sign Up</h3>
 
 		<div class="form-group">
-			{% for col in cols %}
+			{% for col in signupcols %}
 				<label for={{ col }}>{{ col.replace('_', ' ').title() }}</label>
 				<input
 					type="text"
@@ -23,6 +23,12 @@
 
 			<label for="password2">Confirm Password</label>
 			<input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password" />
+			
+			<label for="user_type">User Type:</label>
+			<select name="user_type" id="user_type">
+				<option value="User">User</option>
+				<option value="Employee">Employee</option>
+			</select>
 
 			<div align="center">
 				<button class="btn btn-primary" type="submit">Create User</button>
