Added More Complex Authentication and Data Restrictions
- Employees cannot modify their own position (only a Manager can)
- Employees don't have access to employee information except their own,
- More on-screen useful information for the user

--- a/files/static/style.css
+++ b/files/static/style.css
@@ -22,3 +22,17 @@ h3,
 .form-control {
     margin-bottom: 25px;
 }
+
+.navbar,
+.navbar-expand-lg,
+.navbar-dark{
+    height: 75px;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+
+#current_employee {
+    padding-right: 50px;
+}
