--- a/files/templates/login.html
+++ b/files/templates/login.html
@@ -14,6 +14,9 @@
           name="email"
           class="form-control"
           placeholder="Enter Email"
+          {% if info != "" %}
+            value = {{ info }}
+          {% endif %}
         />
         <label for="password">Password</label>
         <input
